--- a/views/employeeLogin.ejs
+++ b/views/employeeLogin.ejs
@@ -88,6 +88,7 @@
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500">
                   <form action="/studentEnquiry/enquiry" method="post" class="form-box">
                     <h3 class="h4 text-black mb-4">Employee Login Form</h3>
+                    <span style="color:green"><%=message%></span>
                     <div class="form-group">
                       <input 
                         type="text" 
