--- a/views/employeeHome.ejs
+++ b/views/employeeHome.ejs
@@ -48,7 +48,7 @@
           <div class="site-logo mr-auto"><a href="index.html">EduSphere</a></div>
           <div>
             <nav class="site-navigation position-relative text-right" role="navigation">
-              <%-include('./adminHomeHeader.js')%>
+              <%-include('./employeeHomeHeader.js')%>
             </nav>
            <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
             <span class="icon-menu h3"></span></a>
