--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -64,36 +64,46 @@
       <div class="slide-1" style="background-image: url('images/hero_1.jpg');" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-12" style="height:500px;">
+            <div class="col-12" style="height:600px;">
               <div class="row align-items-center">
                 <div class="col-lg-6 mb-4">
                   <h1  data-aos="fade-up" data-aos-delay="100">EduSphere | Admin Panel</h1>
+                  <span style="color:#7971ea"><h4><%=message%></h4></span>
                   <p class="mb-4"  data-aos="fade-up" data-aos-delay="200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ipsa nulla sed quis rerum amet natus quas necessitatibus.</p>
-                  <p data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary py-3 px-5 btn-pill">Admission Now</a></p>
+                  <p data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary py-3 px-5 btn-pill">View Uploaded Syllabus</a></p>
 
                 </div>
 
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500">
-                  <form action="" method="post" class="form-box">
-                    <h3 class="h4 text-black mb-4">Student Enquiry Form</h3>
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Email Addresss">
-                    </div>
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Enter 10-digit Mobile Number">
+                  <form action="/admin/adminUploadSyllabus" method="post" class="form-box" enctype="multipart/form-data">
+                    <h3 class="h4 text-black mb-4">Upload Syllabus</h3>
+                    <div class="form-group mb-4">
+                      <select name="subject" id="subject" class="form-control">
+                        <option value="">Select Subject</option>
+                        <option value="Mern Stack">Mern Stack</option>
+                        <option value="Python with AI/ML">Python with AI/ML</option>
+                        <option value="Java Programming Language">Java Programming Language</option>
+                        <option value="C | C++ Language">C | C++ Language</option>
+                      </select>
                     </div>
                     <div class="form-group mb-4">
-                      <select name="" id="" class="form-control">
-                        <option value="">Select Subject</option>
-                        <option value="">Mern Stack</option>
-                        <option value="">Python with AI/ML</option>
-                        <option value="">Java Programming Language</option>
-                        <option value="">C | C++ Language</option>
+                      <select name="type" id="type" class="form-control">
+                        <option value="">Select Type</option>
+                        <option value="Short Term Course">Short Term Course</option>
+                        <option value="Placement Oriented Course">Placement Oriented Course</option>
                       </select>
-
                     </div>
                     <div class="form-group">
-                      <input type="submit" class="btn btn-primary btn-pill" value="Submit Enquiry">
+                      Date of Upload: 
+                      <input type="date" name="date" id="date" class="form-control">
+                    </div>
+                    <div class="form-group">
+                      Upload Syllabus:
+                      <input type="file" name="syllabus" id="syllabus" class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                      <input type="submit" class="btn btn-primary btn-pill" value="Upload Syllabus">
                     </div>
                   </form>
 
@@ -314,43 +324,36 @@
 
         <div class="row mb-5 justify-content-center">
           <div class="col-lg-7 mb-5 text-center"  data-aos="fade-up" data-aos-delay="">
-            <h2 class="section-title">Our Teachers</h2>
-            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam repellat aut neque! Doloribus sunt non aut reiciendis, vel recusandae obcaecati hic dicta repudiandae in quas quibusdam ullam, illum sed veniam!</p>
+            <br>
+            <h2>Our Students</h2>
           </div>
         </div>
 
         <div class="row">
 
-          <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="teacher text-center">
-              <img src="images/person_1.jpg" alt="Image" class="img-fluid w-50 rounded-circle mx-auto mb-4">
+          <div class="col-md-6 col-lg-6 mb-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="teacher text-center" style="background-color: #7971ea;">
+              <a href="/admin/enquiryStudentList">
+              <img src="images/DALL·E 2025-01-13 11.03.27 - Create a modern, minimalist logo for an educational application feature_ A logo for a list of students who make inquiries. Include an abstract icon of.webp" alt="Image" class="img-fluid w-50 rounded-circle mx-auto mb-4">
               <div class="py-2">
-                <h3 class="text-black">Benjamin Stone</h3>
-                <p class="position">Physics Teacher</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro eius suscipit delectus enim iusto tempora, adipisci at provident.</p>
+                <h2 class="text-white">Enquired Students</h2>
+                <!-- <p class="position">Physics Teacher</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro eius suscipit delectus enim iusto tempora, adipisci at provident.</p> -->
               </div>
+              </a>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="teacher text-center">
-              <img src="images/person_2.jpg" alt="Image" class="img-fluid w-50 rounded-circle mx-auto mb-4">
+          <div class="col-md-6 col-lg-6 mb-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="teacher text-center" style="background-color: #7971ea;">
+              <a href="/admin/existingStudentList">
+              <img src="images/DALL·E 2025-01-13 11.03.36 - Create a modern, minimalist logo for an educational application feature_ A logo for a list of existing students. Include an abstract icon of a group o.webp" alt="Image" class="img-fluid w-50 rounded-circle mx-auto mb-4">
               <div class="py-2">
-                <h3 class="text-black">Katleen Stone</h3>
-                <p class="position">Physics Teacher</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro eius suscipit delectus enim iusto tempora, adipisci at provident.</p>
+                <h2 class="text-white">Existing Student</h2>
+                <!-- <p class="position">Physics Teacher</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro eius suscipit delectus enim iusto tempora, adipisci at provident.</p> -->
               </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="300">
-            <div class="teacher text-center">
-              <img src="images/person_3.jpg" alt="Image" class="img-fluid w-50 rounded-circle mx-auto mb-4">
-              <div class="py-2">
-                <h3 class="text-black">Sadie White</h3>
-                <p class="position">Physics Teacher</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro eius suscipit delectus enim iusto tempora, adipisci at provident.</p>
-              </div>
+              </a>
             </div>
           </div>
         </div>
