--- a/views/home.ejs
+++ b/views/home.ejs
@@ -107,6 +107,7 @@
               <div class="row align-items-center">
                 <div class="col-lg-6 mb-4">
                   
+                  <h1  data-aos="fade-up" data-aos-delay="100">EduSphere</h1>
                   <h1  data-aos="fade-up" data-aos-delay="100" id="output"></h1>
 
                   <p class="mb-4"  data-aos="fade-up" data-aos-delay="200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ipsa nulla sed quis rerum amet natus quas necessitatibus.</p>
@@ -116,7 +117,7 @@
 
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500">
                   <form action="/studentEnquiry/enquiry" method="post" class="form-box">
-                    <h3 class="h4 text-black mb-4">Student Enquiry Form</h3>
+                    <h3 class="h4 text-black mb-4">Learner Enquiry Form</h3>
                     <div class="form-group">
                       <input 
                         type="text" 
@@ -157,6 +158,7 @@
                   </form>
 
                 </div>
+                
               </div>
             </div>
             
@@ -619,10 +621,11 @@
   // Array of dynamic text content
   const messages = [
           "MERN STACK",
-          "Learn FullStack",
           "Python with AI/ML",
-          "Java FullStack",
-          "Placement Oriented"
+          "JAVA STACK",
+          "DATA ANALYTICS",
+          "POWER BI",
+          "C | C++"
       ];
 
       const outputElement = document.getElementById('output');
