--- a/views/notfound.ejs
+++ b/views/notfound.ejs
@@ -8,7 +8,7 @@
 <body>
     <center>
         <h1>
-            Not Found
+            Not Found <br> <%=message%> <br> Error Code : <%=status%>
         </h1>
     </center>
 </body>
