--- a/views/adminCourses.ejs
+++ b/views/adminCourses.ejs
@@ -65,12 +65,13 @@
             <div class="col-lg-7 text-center"  data-aos="fade-up" data-aos-delay="">
               <br>
               <h2>Courses</h2>
+              <span><%=message%></span>
             </div>
           </div>
           <div class="row mb-5 align-items-center">
             <div class="col-lg-2 mb-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
               
-              <form action="/admin/adminViewCourses">
+              <form action="/admin/adminCourseList">
                 <div class="form-group">
                   <input type="submit" class="btn btn-primary btn-pill" value="View Courses">
                 </div>
