--- a/views/notfound.ejs
+++ b/views/notfound.ejs
@@ -8,7 +8,7 @@
 <body>
     <center>
         <h1>
-            Not Found <br> <%=message%> <br> Error Code : <%=status%>
+            Not Found <br> <%=message%> <br> Error Code : <%=status%> <br>
         </h1>
     </center>
 </body>
