--- a/views/adminCourseList.ejs
+++ b/views/adminCourseList.ejs
@@ -39,7 +39,7 @@
       <div class="site-mobile-menu-body"></div>
     </div>
    
-
+    
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
       
         <div class="container-fluid">
@@ -57,87 +57,56 @@
         </div>
         
       </header>
+  
 
-      <div class="site-section" id="courses-section" style="margin-top: -1px;">
-        <br>
+    <div class="site-section" id="programs-section" style="margin-top: -1px;">
+      <br>
         <div class="container">
-          <div class="row mb-5 justify-content-center">
-            <div class="col-lg-7 text-center"  data-aos="fade-up" data-aos-delay="">
-              <br>
-              <h2>Upload Syllabus</h2>
-              <span><%=message%></span>
-            </div>
+        <div class="row mb-5 justify-content-center">
+          <div class="col-lg-12 text-center"  data-aos="fade-up" data-aos-delay="">
+            <br>
+            <h2>Course List</h2>
+            <br>
+            <span style="color:green"><%=message%></span>
+            <table class="table" style="font-size: 12px;">
+                <thead>
+                  <tr>
+                    <th scope="col">S.No</th>
+                    <th scope="col">CourseId</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Type</th>
+                    <th scope="col">Duration</th>
+                    <th scope="col">Fees</th>
+                    <th scope="col" colspan="2">Action</th>
+                    <th scope="col">Detailed Syllabus</th>
+                </tr>
+                </thead>
+                <tbody>
+                  <%courseList.forEach((course,index)=>{%>
+                      <tr>
+                        <td><%=(index+1)%></td>
+                        <td><%=course.courseId%></td>
+                        <td><%=course.courseName%></td>
+                        <td><%=course.courseType%></td>
+                        <td><%=course.courseDuration%></td>
+                        <td><%=course.courseFees%></td>
+                        <td><a class="btn btn-primary py-1 px-2 btn-pill" href="">Update</a></td>
+                        <td><a class="btn btn-primary py-1 px-2 btn-pill" href="">Delete</a></td>
+                        <td><a class="btn btn-primary py-1 px-2 btn-pill" href="">Add</a></td>
+                      </tr>
+                  <%})%>
+                </tbody>
+              </table>
+
           </div>
-          <div class="row mb-5 align-items-center">
-            <div class="col-lg-2 mb-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-              
-              <form action="">
-                <div class="form-group">
-                  <input type="submit" class="btn btn-primary btn-pill" value="View Syllabus">
-                </div>
-              </form>
-              <form action="">
-                <div class="form-group">
-                  <input type="submit" class="btn btn-primary btn-pill" value="View Detailed Syllabus">
-                </div>
-              </form>
-              <form action="">
-                <div class="form-group">
-                  <input type="submit" class="btn btn-primary btn-pill" value="Add Detailed Syllabus">
-                </div>
-              </form>
-  
-  
-            </div>
-            <div class="col-lg-5 mb-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-              <img src="images/undraw_teaching.svg" alt="Image" class="img-fluid">
-            </div>
-  
-            <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500" style="margin-top: -40px;">
-              <form action="/admin/adminUploadSyllabus" method="post" class="form-box" enctype="multipart/form-data">
-                <h3 class="h4 text-black mb-4">Upload Syllabus</h3>
-                <div class="form-group mb-4">
-                  <select name="subject" id="subject" class="form-control">
-                    <option value="">Select Subject</option>
-                    <% result.forEach((course)=>{ %>
-                      <option value="<%=course.courseName%>"><%=course.courseName%></option>  
-                    <% }) %>
-                  </select>
-                </div>
-                <div class="form-group mb-4">
-                  <select name="type" id="type" class="form-control">
-                    <option value="">Select Type</option>
-                    <option value="Short Term Course">Short Term Course</option>
-                    <option value="Placement Oriented Course">Placement Oriented Course</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  Date of Upload: 
-                  <input type="date" name="date" id="date" class="form-control">
-                </div>
-                <div class="form-group">
-                  Upload Syllabus:
-                  <input type="file" name="syllabus" id="syllabus" class="form-control">
-                </div>
-
-                <div class="form-group">
-                  <input type="submit" class="btn btn-primary btn-pill" value="Upload Syllabus">
-                </div>
-              </form>
-
-            </div>
-
-
-            
-          </div>
-  
-        
-  
         </div>
-      </div>
-    
+      
 
-  
+      </div>
+    </div>
+
+    
+     
     <footer class="footer-section bg-white">
       <div class="container">
         <div class="row">
