--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -64,17 +64,17 @@
       <div class="slide-1" style="background-image: url('images/hero_1.jpg');" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-12" style="height:700px;">
+            <div class="col-12" style="height:400px;">
               <div class="row align-items-center">
                 <div class="col-lg-6 mb-4">
                   <h1  data-aos="fade-up" data-aos-delay="100">EduSphere | Admin Panel</h1>
                   <span style="color:#7971ea"><h4 data-aos="fade-up" data-aos-delay="100"><%=message%></h4></span>
                   <p class="mb-4"  data-aos="fade-up" data-aos-delay="200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ipsa nulla sed quis rerum amet natus quas necessitatibus.</p>
-                  <p data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary py-3 px-5 btn-pill">View Uploaded Syllabus</a></p>
+                  <p data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary py-3 px-5 btn-pill">Unlock the Mystry of Coding</a></p>
 
                 </div>
 
-                <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500">
+                <!-- <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500">
                   <form action="/admin/adminUploadSyllabus" method="post" class="form-box" enctype="multipart/form-data">
                     <h3 class="h4 text-black mb-4">Upload Syllabus</h3>
                     <div class="form-group mb-4">
@@ -107,7 +107,7 @@
                     </div>
                   </form>
 
-                </div>
+                </div> -->
               </div>
             </div>
             
