--- a/views/studentECContent.ejs
+++ b/views/studentECContent.ejs
@@ -94,19 +94,19 @@
 
               <div class="d-flex align-items-center custom-icon-wrap custom-icon-light mb-3">
                 <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-graduation-cap"></span></span></div>
-                <div><h3 class="m-0">22,931 Yearly Graduates</h3></div>
+                <div><h3 class="m-0"><%= detailedSyllabusObj.mainTopic?.[0] || "Default Heading" %></h3></div>
               </div>
-
+              
               <div class="d-flex align-items-center custom-icon-wrap custom-icon-light mb-3">
                 <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-university"></span></span></div>
-                <div><h3 class="m-0">150 Universities Worldwide</h3></div>
+                <div><h3 class="m-0"><%= detailedSyllabusObj.mainTopic?.[1] || "Default Heading" %></h3></div>
               </div>
-
+              
               <div class="d-flex align-items-center custom-icon-wrap custom-icon-light mb-3">
                 <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-graduation-cap"></span></span></div>
-                <div><h3 class="m-0">Top Professionals in The World</h3></div>
+                <div><h3 class="m-0"><%= detailedSyllabusObj.mainTopic?.[2] || "Default Heading" %></h3></div>
               </div>
-
+              
               <div class="d-flex align-items-center custom-icon-wrap custom-icon-light mb-3">
                 <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-university"></span></span></div>
                 <div><h3 class="m-0">Expand Your Knowledge</h3></div>
