--- a/views/adminUploadSyllabus.ejs
+++ b/views/adminUploadSyllabus.ejs
@@ -64,7 +64,7 @@
           <div class="row mb-5 justify-content-center">
             <div class="col-lg-7 text-center"  data-aos="fade-up" data-aos-delay="">
               <br>
-              <h2>Upload Syllabus</h2>
+              <h4>Upload Syllabus</h4>
               <span><%=message%></span>
             </div>
           </div>
@@ -94,7 +94,10 @@
             </div>
   
             <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500" style="margin-top: -40px;">
-              <form action="/admin/adminUploadSyllabus" method="post" class="form-box" enctype="multipart/form-data">
+              <!-- <form action="/admin/adminUploadSyllabus" method="post" class="form-box" enctype="multipart/form-data"> -->
+
+                <form action="/admin/checkUploadSyllabusAvailability" method="post" class="form-box" enctype="multipart/form-data">
+                
                 <h3 class="h4 text-black mb-4">Upload Syllabus</h3>
                 <div class="form-group mb-4">
                   <select name="subject" id="subject" class="form-control">
@@ -121,8 +124,14 @@
                 </div>
 
                 <div class="form-group">
-                  <input type="submit" class="btn btn-primary btn-pill" value="Upload Syllabus">
+                  <%if(flag){%>
+                  <input type="submit" class="btn btn-danger btn-pill" value="Modify Syllabus">
+                  <%}else{%>
+                    <input type="submit" class="btn btn-primary btn-pill" value="Upload Syllabus">
+                    <%}%>
+                  <input type="reset" class="btn btn-primary btn-pill" value="Reset">
                 </div>
+
               </form>
 
             </div>
