--- a/views/studentECContent.ejs
+++ b/views/studentECContent.ejs
@@ -84,7 +84,9 @@
       <div class="container">
         <div class="row mb-5 justify-content-center" data-aos="fade-up" data-aos-delay="">
           <div class="col-lg-7 text-center">
-            <h2 class="section-title">Abbreviated Syllabus</h2>
+            <h4>Abbreviated Syllabus of <b>
+              <%=detailedSyllabusObj.courseName%>
+            </b></h4>
           </div>
         </div>
         <div class="row">
@@ -93,34 +95,51 @@
             <div class="p-4 rounded bg-white why-choose-us-box">
 
               <div class="d-flex align-items-center custom-icon-wrap custom-icon-light mb-3">
-                <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-graduation-cap"></span></span></div>
-                <div><h3 class="m-0"><%= detailedSyllabusObj.mainTopic?.[0] || "Default Heading" %></h3></div>
+                <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-list"></span></div>
+                <div><h3 class="m-0"><%= detailedSyllabusObj?.mainTopic[0] ? detailedSyllabusObj.mainTopic[0] : "Default Heading" %></h3>
+                      <ul style="list-style: none;">
+                        <li>
+                          <%=detailedSyllabusObj?.subTopic[0] ? detailedSyllabusObj.subTopic[0] : "Default SubTopic"%>
+                        </li>
+                      </ul>
+                 </div>
               </div>
               
               <div class="d-flex align-items-center custom-icon-wrap custom-icon-light mb-3">
-                <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-university"></span></span></div>
-                <div><h3 class="m-0"><%= detailedSyllabusObj.mainTopic?.[1] || "Default Heading" %></h3></div>
+                <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-list"></span></span></div>
+                <div><h3 class="m-0"><%= detailedSyllabusObj?.mainTopic[1] ? detailedSyllabusObj.mainTopic[1] : "Default Heading" %></h3>
+                  <ul style="list-style: none;">
+                    <li>
+                      <%=detailedSyllabusObj?.subTopic[1] ? detailedSyllabusObj.subTopic[1] : "Default SubTopic"%>
+                    </li>
+                  </ul>
+                  </div>
               </div>
               
               <div class="d-flex align-items-center custom-icon-wrap custom-icon-light mb-3">
-                <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-graduation-cap"></span></span></div>
-                <div><h3 class="m-0"><%= detailedSyllabusObj.mainTopic?.[2] || "Default Heading" %></h3></div>
-              </div>
-              
-              <div class="d-flex align-items-center custom-icon-wrap custom-icon-light mb-3">
-                <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-university"></span></span></div>
-                <div><h3 class="m-0">Expand Your Knowledge</h3></div>
+                <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-list"></span></span></div>
+                <div><h3 class="m-0"><%= detailedSyllabusObj?.mainTopic[2] ? detailedSyllabusObj.mainTopic[2] : "Default Heading" %></h3>
+                  <ul style="list-style: none;">
+                    <li>
+                      <%=detailedSyllabusObj?.subTopic[2] ? detailedSyllabusObj.subTopic[2] : "Default SubTopic"%>
+                    </li>
+                  </ul>
+                </div>
               </div>
 
               <div class="d-flex align-items-center custom-icon-wrap custom-icon-light mb-3">
-                <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-graduation-cap"></span></span></div>
-                <div><h3 class="m-0">Best Online Teaching Assistant Courses</h3></div>
+                <div class="mr-3"></div>
+                <div><h3 class="m-0 text-primary">For More Topic to View....</h3>
+                </div>
               </div>
-
-              <div class="d-flex align-items-center custom-icon-wrap custom-icon-light">
-                <div class="mr-3"><span class="custom-icon-inner"><span class="icon icon-university"></span></span></div>
-                <div><h3 class="m-0">Best Teachers</h3></div>
-              </div>
+              
+              
+                <a href="/syllabus/<%=detailedSyllabusObj.fileName%>">
+                  <button class="btn btn-primary py-3 px-5 btn-pill">
+                    Download Complete Syllabus
+                  </button>
+                </a>
+              
 
             </div>
 
